# NX

./: CMakeLists.txt  NX  README.md  answer.out
backend/include/: AStar.hpp  FibonacciHeap.hpp  buildgraph.hpp  dijkstra.hpp  findnode.hpp  geodistance.hpp  jsonbuild.hpp  loadosm.hpp  reconstruct.hpp  routeplanner.hpp
backend/src/: main.cpp  main_app.cpp  main_app2.cpp
frontend/: backup.html  index.html  polyline.js  ws_test.html
